feat: Add field purchase functionality for employees
- Implemented a new page for field purchases, allowing employees to log purchases with item details, vendor information, and project association.
- Enhanced the order registration process to include source tracking for inventory items.
- Added a reassign reserved stock feature for admins to manage inventory between projects.
- Updated the database schema to accommodate new fields for source tracking and job management.
- Improved the UI to support new functionalities, including dynamic form handling for purchase lines and recent purchase displays.

--- a/dashboard.html
+++ b/dashboard.html
@@ -32,6 +32,8 @@
         <a href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
         <a href="order-register.html" data-role="admin">Orders</a>
+        <a href="field-purchase.html" data-role="employee">Field Purchases</a>
+
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
         <a href="item-history.html" data-role="admin">History</a>
@@ -97,7 +99,7 @@
         <div class="table-card">
           <h3>Inbound / Ordered</h3>
           <table id="orderedTable">
-            <thead><tr><th>Code</th><th>Qty</th><th>ETA</th><th>Project</th></tr></thead>
+            <thead><tr><th>Code</th><th>Open Qty</th><th>ETA</th><th>Project</th></tr></thead>
             <tbody><tr><td colspan="4" style="text-align:center;color:#6b7280;">Loading...</td></tr></tbody>
           </table>
         </div>
