--- a/inventory-list.html
+++ b/inventory-list.html
@@ -29,6 +29,8 @@
         <a href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
         <a href="order-register.html" data-role="admin">Orders</a>
+        <a href="field-purchase.html" data-role="employee">Field Purchases</a>
+
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
         <a href="item-history.html" data-role="admin">History</a>
@@ -70,7 +72,7 @@
           <input id="incomingSearchBox" type="text" placeholder="Search by code or project..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:300px;">
         </div>
         <table id="incomingTable">
-          <thead><tr><th>Code</th><th>Name</th><th>Qty</th><th>Project</th><th>ETA</th><th>Ordered On</th></tr></thead>
+          <thead><tr><th>Code</th><th>Name</th><th>Open Qty</th><th>Project</th><th>ETA</th><th>Ordered On</th></tr></thead>
           <tbody></tbody>
         </table>
       </section>
