--- a/item-history.html
+++ b/item-history.html
@@ -29,6 +29,8 @@
         <a href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
         <a href="order-register.html" data-role="admin">Orders</a>
+        <a href="field-purchase.html" data-role="employee">Field Purchases</a>
+
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
         <a class="active" href="item-history.html" data-role="admin">History</a>
@@ -47,6 +49,7 @@
           <select id="histType" style="padding:8px;border-radius:6px;border:1px solid #e6edf3;">
             <option value="">All types</option>
             <option value="ordered">Ordered</option>
+            <option value="purchase">Field Purchase</option>
             <option value="in">Check-In</option>
             <option value="out">Check-Out</option>
             <option value="reserve">Reserve</option>
