--- a/item-master.html
+++ b/item-master.html
@@ -29,6 +29,8 @@
         <a class="active" href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
         <a href="order-register.html" data-role="admin">Orders</a>
+        <a href="field-purchase.html" data-role="employee">Field Purchases</a>
+
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
         <a href="item-history.html" data-role="admin">History</a>
