--- a/inventory-list.html
+++ b/inventory-list.html
@@ -43,38 +43,75 @@
         <div class="topbar-right"><button id="logoutBtn" class="muted">Logout</button></div>
       </header>
 
-      <section class="card">
-        <div style="margin-bottom:12px;">
-          <input id="searchBox" type="text" placeholder="Search by code or name..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:300px;">
+      <section class="widgets">
+        <div class="card">
+          <h3>Incoming Open Qty</h3>
+          <div class="value" id="incomingTotal">-</div>
+          <p class="muted-text" id="incomingMeta">-</p>
         </div>
-        <table id="invTable">
-          <thead><tr><th>Code</th><th>Name</th><th>Projects</th><th>Total In</th><th>Total Out</th><th>Reserved</th><th>Available</th><th>Last Updated</th></tr></thead>
-          <tbody></tbody>
-        </table>
-      </section>
-
-      
-
-      <section class="card">
-        <h3>Project Inventory Summary</h3>
-        <div style="margin-bottom:12px;">
-          <input id="jobSummarySearch" type="text" placeholder="Search by project ID..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:300px;">
+        <div class="card">
+          <h3>Low Stock Items</h3>
+          <div class="value" id="lowStockCount">-</div>
+          <p class="muted-text">Threshold: 5 units</p>
         </div>
-        <table id="jobSummaryTable">
-          <thead><tr><th>Project ID</th><th>Item Code</th><th>Open Orders</th><th>Checked In</th><th>Reserved</th><th>Checked Out</th><th>Available</th><th>Last Activity</th></tr></thead>
-          <tbody></tbody>
-        </table>
+        <div class="card">
+          <h3>Overdue Returns</h3>
+          <div class="value" id="overdueCount">-</div>
+          <p class="muted-text">Based on return due date</p>
+        </div>
       </section>
 
       <section class="card">
-        <h3>Incoming Inventory</h3>
-        <div style="margin-bottom:12px;">
-          <input id="incomingSearchBox" type="text" placeholder="Search by code or project..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:300px;">
+        <div class="mode-tabs inventory-tabs">
+          <button class="mode-btn active" data-tab="incoming">Incoming</button>
+          <button class="mode-btn" data-tab="onhand">On-hand</button>
         </div>
-        <table id="incomingTable">
-          <thead><tr><th>Code</th><th>Name</th><th>Open Qty</th><th>Project</th><th>ETA</th><th>Ordered On</th></tr></thead>
-          <tbody></tbody>
-        </table>
+
+        <div id="incoming-tab" class="mode-content active">
+          <div class="data-toolbar inventory-toolbar">
+            <input id="incomingSearchBox" type="text" placeholder="Search incoming by code or project...">
+            <button id="incoming-exportBtn" type="button" class="muted">Export CSV</button>
+            <button id="incoming-printBtn" type="button" class="muted">Print</button>
+            <a id="incoming-receiveBtn" class="muted" href="inventory-operations.html#checkin">Open Receive</a>
+          </div>
+          <table id="incomingTable">
+            <thead><tr><th>Code</th><th>Name</th><th>Open Qty</th><th>Project</th><th>ETA</th><th>Days Late</th><th>Ordered On</th></tr></thead>
+            <tbody></tbody>
+          </table>
+        </div>
+
+        <div id="onhand-tab" class="mode-content">
+          <div class="inventory-toolbar sticky-bar">
+            <input id="searchBox" type="text" placeholder="Search by code or name...">
+            <label class="filter-chip"><input id="filter-low" type="checkbox"> Low stock</label>
+            <label class="filter-chip"><input id="filter-overdue" type="checkbox"> Overdue returns</label>
+            <label class="filter-chip"><input id="filter-project" type="checkbox"> Assigned to project</label>
+            <label class="filter-chip"><input id="filter-recent" type="checkbox"> Recently checked in</label>
+            <label class="filter-chip"><input id="filter-count" type="checkbox"> Needs count</label>
+            <label class="filter-chip scan-toggle"><input id="scanMode" type="checkbox"> Scan mode</label>
+            <button id="cycleToggle" type="button" class="muted">Cycle Count Mode</button>
+            <button id="saveCountsBtn" type="button" class="muted">Save Counts</button>
+            <button id="exportOnhandBtn" type="button" class="muted">Export CSV</button>
+            <button id="printOnhandBtn" type="button" class="muted">Print</button>
+            <button id="clearFiltersBtn" type="button" class="muted">Clear Filters</button>
+          </div>
+          <table id="invTable">
+            <thead>
+              <tr>
+                <th>Code</th>
+                <th>Name</th>
+                <th>Available</th>
+                <th>Reserved</th>
+                <th>Checked Out</th>
+                <th>Last Activity</th>
+                <th>Last Count</th>
+                <th class="count-input-col">Counted Qty</th>
+                <th>Discrepancy</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
       </section>
     </main>
   </div>
