Procurement & Allocation redesign

--- a/dashboard.html
+++ b/dashboard.html
@@ -31,7 +31,7 @@
         <a href="job-report.html">Project Report</a>
         <a href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
-        <a href="order-register.html" data-role="admin">Orders</a>
+        <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
         <a href="field-purchase.html" data-role="employee">Field Purchases</a>
 
         <a href="settings.html" data-role="admin">Settings</a>
@@ -59,7 +59,7 @@
             <div class="tile-sub">Move items fast</div>
           </a>
           <a class="action-tile" href="order-register.html">
-            <div class="tile-title">Orders &amp; Reserves</div>
+            <div class="tile-title">Procurement &amp; Allocation</div>
             <div class="tile-sub">Place/allocate stock</div>
           </a>
           <a class="action-tile" href="item-master.html">
@@ -132,4 +132,5 @@
   <script src="js/dashboard.js"></script>
 </body>
 </html>
+
 
