--- a/job-creator.html
+++ b/job-creator.html
@@ -28,7 +28,7 @@
         <a href="job-report.html">Project Report</a>
         <a href="item-master.html" data-role="admin">Item Master</a>
         <a class="active" href="job-creator.html" data-role="admin">Project Manager</a>
-        <a href="order-register.html" data-role="admin">Orders</a>
+        <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
         <a href="field-purchase.html" data-role="employee">Field Purchases</a>
 
         <a href="settings.html" data-role="admin">Settings</a>
@@ -73,3 +73,4 @@
   <script>document.addEventListener('DOMContentLoaded',()=>{if(window.utils){utils.wrapFetchWithRole?.();utils.applyStoredTheme?.();utils.applyNavVisibility?.();utils.setupLogout?.();}});</script>
 </body>
 </html>
+
