--- a/settings-employee.html
+++ b/settings-employee.html
@@ -28,7 +28,7 @@
         <a href="job-report.html">Project Report</a>
         <a href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
-        <a href="order-register.html" data-role="admin">Orders</a>
+        <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
         <a href="field-purchase.html" data-role="employee">Field Purchases</a>
 
         <a href="settings.html" data-role="admin">Settings</a>
@@ -114,7 +114,7 @@
               <select id="languageSelect">
                 <option value="en-US">English (US)</option>
                 <option value="en-GB">English (UK)</option>
-                <option value="es-ES">Español</option>
+                <option value="es-ES">Espa??ol</option>
               </select>
             </label>
             <label>Time Format
@@ -135,4 +135,5 @@
   <script src="js/settings-employee.js"></script>
 </body>
 </html>
+
 
