--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -39,7 +39,7 @@
         <a href="job-report.html">Project Report</a>
       <a href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
-      <a href="order-register.html" data-role="admin">Orders</a>
+      <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
         <a href="field-purchase.html" data-role="employee">Field Purchases</a>
 
       <a href="settings.html" data-role="admin">Settings</a>
@@ -199,4 +199,5 @@
   </script>
 </body>
 </html>
+
 
