--- a/field-purchase.html
+++ b/field-purchase.html
@@ -31,7 +31,7 @@
         <a href="job-report.html">Project Report</a>
         <a href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
-        <a href="order-register.html" data-role="admin">Orders</a>
+        <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
         <a class="active" href="field-purchase.html" data-role="employee">Field Purchases</a>
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
@@ -103,3 +103,4 @@
   <script src="js/field-purchase.js"></script>
 </body>
 </html>
+
