--- a/settings.html
+++ b/settings.html
@@ -33,7 +33,7 @@
         <a href="job-report.html">Project Report</a>
       <a href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
-      <a href="order-register.html" data-role="admin">Orders</a>
+      <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
         <a href="field-purchase.html" data-role="employee">Field Purchases</a>
 
       <a class="active" href="settings.html" data-role="admin">Settings</a>
@@ -123,4 +123,5 @@
   <script>document.addEventListener('DOMContentLoaded',()=>{if(window.utils){utils.wrapFetchWithRole?.();utils.applyStoredTheme?.();utils.applyNavVisibility?.();utils.setupLogout?.();}});</script>
 </body>
 </html>
+
 
