Add clock functionality and update UI elements in inventory and registration pages

--- a/inventory-list.html
+++ b/inventory-list.html
@@ -45,7 +45,7 @@
 
       <section class="widgets">
         <div class="card">
-          <h3>Incoming Open Qty</h3>
+          <h3>Incoming Orders</h3>
           <div class="value" id="incomingTotal">-</div>
           <p class="muted-text" id="incomingMeta">-</p>
         </div>
