--- a/login.html
+++ b/login.html
@@ -40,6 +40,7 @@
       </form>
     </div>
   </div>
+  <script src="js/utils.js"></script>
   <script src="js/login.js"></script>
 </body>
 </html>
