--- a/register.html
+++ b/register.html
@@ -50,6 +50,7 @@
       </form>
     </div>
   </div>
+  <script src="js/utils.js"></script>
   <script src="js/register.js"></script>
 </body>
 </html>
