--- a/tenant-create.html
+++ b/tenant-create.html
@@ -47,6 +47,7 @@
       </form>
     </div>
   </div>
+  <script src="js/utils.js"></script>
   <script src="js/tenant-create.js"></script>
 </body>
 </html>
