Update project report links and enhance job creator functionality

--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -36,7 +36,7 @@
       <a class="active" href="employee-dashboard.html" data-role="employee">Dashboard</a>
       <a href="inventory-operations.html">Operations</a>
       <a href="inventory-list.html">Inventory</a>
-        <a href="job-report.html">Project Report</a>
+        <a href="job-creator.html#report">Project Report</a>
       <a href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
       <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
@@ -66,7 +66,7 @@
           <div style="display:flex;gap:8px;">
             <a href="inventory-operations.html?mode=checkout" class="task-btn" style="background:#fff;color:#0a1b2b;box-shadow:0 10px 22px rgba(255,255,255,0.2);">Receive / Pick</a>
             <a href="inventory-list.html" class="task-btn" style="background:rgba(255,255,255,0.14);color:#fff;border:1px solid rgba(255,255,255,0.25);">Check Stock</a>
-            <a href="job-report.html" class="task-btn" style="background:rgba(255,255,255,0.14);color:#fff;border:1px solid rgba(255,255,255,0.25);">Project Activity</a>
+            <a href="job-creator.html#report" class="task-btn" style="background:rgba(255,255,255,0.14);color:#fff;border:1px solid rgba(255,255,255,0.25);">Project Activity</a>
             <a href="field-purchase.html" class="task-btn" style="background:rgba(255,255,255,0.14);color:#fff;border:1px solid rgba(255,255,255,0.25);">Field Purchases</a>
           </div>
         </div>
