--- a/item-history.html
+++ b/item-history.html
@@ -25,7 +25,7 @@
         <a  href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
         <a href="inventory-list.html">Inventory</a>
-        <a href="job-report.html">Project Report</a>
+        <a href="job-creator.html#report">Project Report</a>
         <a href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
         <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
