--- a/job-report.html
+++ b/job-report.html
@@ -3,63 +3,24 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Project Inventory Report</title>
+  <meta http-equiv="refresh" content="0; url=job-creator.html#report" />
+  <title>Project Report</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <div class="app">
-        <aside class="sidebar">
-      <div>
-        <div class="brand">Inventory Management System</div>
-        <div class="subtitle">Navigation</div>
-        <div class="user-chip">
-          <div class="avatar">US</div>
-          <div>
-            <div style="font-weight:700;">User</div>
-            <div style="font-size:12px;opacity:0.8;"></div>
-          </div>
-        </div>
-      </div>
-      <nav>
-        <a  href="dashboard.html" data-role="admin">Admin Dashboard</a>
-        <a  href="employee-dashboard.html" data-role="employee">Dashboard</a>
-        <a href="inventory-operations.html">Operations</a>
-        <a href="inventory-list.html">Inventory</a>
-        <a class="active" href="job-report.html">Project Report</a>
-        <a href="item-master.html" data-role="admin">Item Master</a>
-        <a href="job-creator.html" data-role="admin">Project Manager</a>
-        <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
-        <a href="field-purchase.html" data-role="employee">Field Purchases</a>
-
-        <a href="settings.html" data-role="admin">Settings</a>
-        <a href="settings-employee.html" data-role="employee">Settings</a>
-        <a href="item-history.html" data-role="admin">History</a>
-      </nav>
-    </aside>
-
     <main class="main">
       <header class="topbar">
-        <h1>Project Inventory Report</h1>
-        <div class="topbar-right"><button id="logoutBtn" class="muted">Logout</button></div>
+        <h1>Project Report</h1>
       </header>
-
       <section class="card">
-        <div style="margin-bottom:12px;">
-          <input id="searchBox" type="text" placeholder="Search by project ID..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:300px;">
-          <button id="exportBtn" type="button" class="muted" style="margin-left:10px;padding:8px 12px;border-radius:6px;border:1px solid #e6edf3;background:#eef2f7;">Export CSV</button>
-        </div>
-        <table id="jobTable">
-          <thead><tr><th>Project ID</th><th>Item Code</th><th>Checked In</th><th>Checked Out</th><th>Reserved</th><th>Net Usage</th></tr></thead>
-          <tbody></tbody>
-        </table>
+        <p>This page moved to Project Manager.</p>
+        <p><a href="job-creator.html#report">Open the Project Report tab</a></p>
       </section>
     </main>
   </div>
-
-  <script src="js/utils.js"></script>
-  <script src="js/job-report.js"></script>
-  <script>document.addEventListener('DOMContentLoaded',()=>{if(window.utils){utils.wrapFetchWithRole?.();utils.applyStoredTheme?.();utils.applyNavVisibility?.();utils.setupLogout?.();}});</script>
+  <script>
+    window.location.replace('job-creator.html#report');
+  </script>
 </body>
 </html>
-
-
