--- a/job-creator.html
+++ b/job-creator.html
@@ -25,7 +25,6 @@
         <a  href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
         <a href="inventory-list.html">Inventory</a>
-        <a href="job-creator.html#report">Project Report</a>
         <a href="item-master.html" data-role="admin">Item Master</a>
         <a class="active" href="job-creator.html" data-role="admin">Project Manager</a>
         <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
@@ -58,7 +57,22 @@
             <div class="form-row">
               <label>Project Code<input id="jobCode" required placeholder="Unique project number or name"></label>
               <label>Display Name<input id="jobName" placeholder="Optional friendly name"></label>
-              <label>Schedule Date<input id="jobDate" type="date"></label>
+              <label>Status
+                <select id="jobStatus">
+                  <option value="planned">Planned</option>
+                  <option value="active">Active</option>
+                  <option value="on-hold">On Hold</option>
+                  <option value="complete">Complete</option>
+                </select>
+              </label>
+            </div>
+            <div class="form-row">
+              <label>Start Date<input id="jobStartDate" type="date"></label>
+              <label>End Date<input id="jobEndDate" type="date"></label>
+              <label>Location<input id="jobLocation" placeholder="Optional site/location"></label>
+            </div>
+            <div class="form-row">
+              <label>Notes<textarea id="jobNotes" rows="3" placeholder="Optional project notes, scope, or instructions"></textarea></label>
             </div>
             <div class="form-row">
               <button type="submit">Save Project</button>
@@ -77,7 +91,12 @@
               <tr>
                 <th>Code</th>
                 <th>Name</th>
-                <th>Schedule Date</th>
+                <th>Status</th>
+                <th>Start Date</th>
+                <th>End Date</th>
+                <th>Location</th>
+                <th>Notes</th>
+                <th>Last Updated</th>
                 <th id="projectActionsHeader">Actions</th>
               </tr>
             </thead>
@@ -106,4 +125,5 @@
   <script>document.addEventListener('DOMContentLoaded',()=>{if(window.utils){utils.wrapFetchWithRole?.();utils.applyStoredTheme?.();utils.applyNavVisibility?.();utils.setupLogout?.();}});</script>
 </body>
 </html>
+
 
