--- a/settings.html
+++ b/settings.html
@@ -51,67 +51,94 @@
       <div class="card">
         <div class="tab-bar">
           <button class="active" data-tab="users">User Management</button>
-          <button data-tab="profile" disabled style="opacity:0.5;cursor:not-allowed;">Profile (coming soon)</button>
+          <button data-tab="profile">Profile</button>
         </div>
         <div id="admin-guard" style="color:#b91c1c;display:none;">Admin only. Please login with an admin account.</div>
         <div id="settings-content">
-          <section class="inventory-card">
-            <h3>Create User</h3>
-            <form id="userForm" class="inventory-form">
-              <div class="form-row">
-                <label>Name<input id="userName" required></label>
-                <label>Email<input id="userEmail" type="email" required></label>
-              </div>
-              <div class="form-row">
-                <label>Password<input id="userPassword" type="password" required></label>
-                <label>Role
-                  <select id="userRole">
-                    <option value="user">User</option>
-                    <option value="admin">Admin</option>
-                  </select>
-                </label>
-              </div>
-              <div class="form-row">
-                <button type="submit">Create User</button>
-                <button id="userClearBtn" type="button" class="muted">Clear</button>
-              </div>
-              <div id="userError" style="color:#b91c1c;font-size:0.9rem;"></div>
-            </form>
-          </section>
+          <div id="panelUsers">
+            <section class="inventory-card">
+              <h3>Create User</h3>
+              <form id="userForm" class="inventory-form">
+                <div class="form-row">
+                  <label>Name<input id="userName" required></label>
+                  <label>Email<input id="userEmail" type="email" required></label>
+                </div>
+                <div class="form-row">
+                  <label>Password<input id="userPassword" type="password" required></label>
+                  <label>Role
+                    <select id="userRole">
+                      <option value="user">User</option>
+                      <option value="admin">Admin</option>
+                    </select>
+                  </label>
+                </div>
+                <div class="form-row">
+                  <button type="submit">Create User</button>
+                  <button id="userClearBtn" type="button" class="muted">Clear</button>
+                </div>
+                <div id="userError" style="color:#b91c1c;font-size:0.9rem;"></div>
+              </form>
+            </section>
 
-          <section class="card">
-            <h3>Existing Users</h3>
-            <table id="usersTable">
-              <thead><tr><th>Email</th><th>Name</th><th>Role</th><th>Created</th><th>Action</th></tr></thead>
-              <tbody></tbody>
-            </table>
-          </section>
+            <section class="card">
+              <h3>Existing Users</h3>
+              <table id="usersTable">
+                <thead><tr><th>Email</th><th>Name</th><th>Role</th><th>Created</th><th>Action</th></tr></thead>
+                <tbody></tbody>
+              </table>
+            </section>
 
-          <section class="inventory-card">
-            <h3>Edit User</h3>
-            <p style="color:#6b7280;margin-top:0;">Select a user above to edit email, password or role.</p>
-            <form id="editUserForm" class="inventory-form">
-              <input type="hidden" id="edit-userId">
-              <div class="form-row">
-                <label>Name<input id="edit-userName" required></label>
-                <label>Email<input id="edit-userEmail" type="email" required></label>
-              </div>
-              <div class="form-row">
-                <label>Role
-                  <select id="edit-userRole">
-                    <option value="user">User</option>
-                    <option value="admin">Admin</option>
-                  </select>
-                </label>
-                <label>New Password<input id="edit-userPassword" type="password" placeholder="Leave blank to keep current"></label>
-              </div>
-              <div class="form-row">
-                <button type="submit">Update User</button>
-                <button id="edit-userClearBtn" type="button" class="muted">Clear</button>
-              </div>
-              <div id="edit-userError" style="color:#b91c1c;font-size:0.9rem;"></div>
-            </form>
-          </section>
+            <section class="inventory-card">
+              <h3>Edit User</h3>
+              <p style="color:#6b7280;margin-top:0;">Select a user above to edit email, password or role.</p>
+              <form id="editUserForm" class="inventory-form">
+                <input type="hidden" id="edit-userId">
+                <div class="form-row">
+                  <label>Name<input id="edit-userName" required></label>
+                  <label>Email<input id="edit-userEmail" type="email" required></label>
+                </div>
+                <div class="form-row">
+                  <label>Role
+                    <select id="edit-userRole">
+                      <option value="user">User</option>
+                      <option value="admin">Admin</option>
+                    </select>
+                  </label>
+                  <label>New Password<input id="edit-userPassword" type="password" placeholder="Leave blank to keep current"></label>
+                </div>
+                <div class="form-row">
+                  <button type="submit">Update User</button>
+                  <button id="edit-userClearBtn" type="button" class="muted">Clear</button>
+                </div>
+                <div id="edit-userError" style="color:#b91c1c;font-size:0.9rem;"></div>
+              </form>
+            </section>
+          </div>
+
+          <div id="panelProfile" style="display:none;">
+            <section class="inventory-card">
+              <h3>Profile</h3>
+              <form id="adminProfileForm" class="inventory-form" autocomplete="off">
+                <div class="form-row">
+                  <label>Name
+                    <input id="adminProfileName" type="text" placeholder="Your display name">
+                  </label>
+                  <label>Avatar Initials
+                    <input id="adminProfileAvatar" type="text" maxlength="2" placeholder="e.g. JD">
+                  </label>
+                  <label>Profile Picture
+                    <input id="adminProfilePicture" type="file" accept="image/*">
+                  </label>
+                </div>
+                <div class="form-row">
+                  <button type="submit">Save Profile</button>
+                  <button id="adminProfileClear" type="button" class="muted">Clear</button>
+                </div>
+                <div style="font-size:0.9rem;color:#6b7280;">Only the most recent picture is kept.</div>
+                <div id="adminProfileMsg" style="font-size:0.9rem;color:#6b7280;margin-top:8px;"></div>
+              </form>
+            </section>
+          </div>
         </div>
       </div>
     </main>
